--- a/nbla_plays.ipynb
+++ b/nbla_plays.ipynb
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {
     "scrolled": false
    },
@@ -1031,23 +1031,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[6 3 1 4 2 7 7 7]\n",
-      " [2 5 6 7 6 2 4 1]\n",
-      " [1 6 2 1 3 3 3 2]\n",
-      " [9 1 1 1 9 5 9 8]\n",
-      " [1 0 9 2 3 7 1 7]\n",
-      " [0 3 0 3 9 1 4 8]\n",
-      " [6 2 8 4 6 3 2 7]\n",
-      " [7 5 1 3 7 6 1 5]]\n"
+      "[[4 2 3 6 3 3 2 9]\n",
+      " [1 0 3 7 2 1 3 7]\n",
+      " [7 2 9 5 9 1 5 2]\n",
+      " [1 8 4 2 8 1 2 4]\n",
+      " [9 0 2 5 2 7 9 0]\n",
+      " [9 0 1 5 5 9 5 9]\n",
+      " [8 2 5 9 7 0 4 3]\n",
+      " [2 7 9 7 2 7 5 2]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff06e382ed0>"
+       "<matplotlib.image.AxesImage at 0x7ff06e5f5cd0>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
