guide to convert to C-style data

--- a/nbla_plays.ipynb
+++ b/nbla_plays.ipynb
@@ -900,6 +900,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Convert from binary NNB to C-style NNB\n",
+    "\n",
+    "https://github.com/Jamesits/bin2array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Convert from NNP to C source\n",
     "This generated C source files are in the directory `csrc_dir_name`, with a GNUmakefile. This should be a good example of using the generated C source model.\n",
     "\n",
@@ -998,6 +1007,15 @@
     "    print('type = %s' % type(x.d[0,0,0,0]))\n",
     "    fh.write(np.float32(x.d))\n",
     "plt.imshow(tile_images(x.d), **imshow_opt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Convert from binary raw images to C-style images\n",
+    "\n",
+    "https://github.com/Jamesits/bin2array"
    ]
   },
   {
