add simple Nnabla model

--- a/nbla_plays.ipynb
+++ b/nbla_plays.ipynb
@@ -4,6 +4,286 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Simple Neuron Network\n",
+    "In this section, we build very simply Nnabla model and save the model in a NNB file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-04-28 16:14:36,395 [nnabla][INFO]: Initializing CPU extension...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nnabla as nn\n",
+    "import nnabla.functions as F\n",
+    "import nnabla.parametric_functions as PF\n",
+    "import numpy as np\n",
+    "import nnabla.initializer as I\n",
+    "\n",
+    "nn.parameter.clear_parameters()\n",
+    "rng = np.random.seed(31024)\n",
+    "initializer = I.UniformInitializer((-0.1, 0.1), rng=rng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 1\n",
+    "nnp_file_name = 'simple_nn_0.nnp'\n",
+    "nnb_file_name = 'simple_nn_0.nnb'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = nn.Variable((1, 5))\n",
+    "y = PF.affine(x, 1, w_init=initializer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.d = np.array([1,2,3,4,5])\n",
+    "print(x.d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.7102661]], dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.forward()\n",
+    "y.d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_nnp(input, output, batchsize):\n",
+    "    runtime_contents = {\n",
+    "        'networks': [\n",
+    "            {'name': 'NN-0',\n",
+    "             'batch_size': batchsize,\n",
+    "             'outputs': output,\n",
+    "             'names': input}],\n",
+    "        'executors': [\n",
+    "            {'name': 'Runtime',\n",
+    "             'network': 'NN-0',\n",
+    "             'data': [k for k, _ in input.items()],\n",
+    "             'output':[k for k, _ in output.items()]}]}\n",
+    "    return runtime_contents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'networks': [{'name': 'NN-0', 'batch_size': 1, 'outputs': {'y': <Variable((1, 1), need_grad=True) at 0x7fa2daf629b0>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7fa2dafdba70>}}], 'executors': [{'name': 'Runtime', 'network': 'NN-0', 'data': ['x'], 'output': ['y']}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "content = save_nnp(input={'x': x}, output={'y': y}, batchsize=batch_size)\n",
+    "print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-04-28 16:14:40,753 [nnabla][INFO]: Saving simple_nn_0.nnp as nnp\n",
+      "2020-04-28 16:14:40,756 [nnabla][INFO]: Saving /tmp/tmpaeqkxf91/network.nntxt as prototxt\n",
+      "2020-04-28 16:14:40,762 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmpaeqkxf91/parameter.protobuf\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nnabla.utils.save as save\n",
+    "save.save(nnp_file_name, content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Convert from NNP to NNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert from NNP to NNB\n",
+    "import subprocess, sys, os\n",
+    "out = subprocess.Popen(['nnabla_cli', 'convert', '-b', '%d' % batch_size, nnp_file_name, nnb_file_name])\n",
+    "assert(os.path.exists(nnb_file_name))\n",
+    "assert(os.path.isfile(nnb_file_name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Convert from binary NNB to C-style NNB\n",
+    "\n",
+    "https://github.com/Jamesits/bin2array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nnabla.utils.nnp_graph import NnpLoader\n",
+    "# Read a .nnp file.\n",
+    "nnp = NnpLoader(nnp_file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': <Variable((1, 5), need_grad=False) at 0x7fa2d799e350>, 'affine/W': <Variable((5, 1), need_grad=True) at 0x7fa2d799e3b0>, 'affine/b': <Variable((1,), need_grad=True) at 0x7fa2d799e410>, 'y': <Variable((1, 1), need_grad=True) at 0x7fa2d799e4d0>}\n"
+     ]
+    }
+   ],
+   "source": [
+    "nw_name = nnp.get_network_names()[0]\n",
+    "net = nnp.get_network(nw_name)\n",
+    "print(net.variables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': <Variable((1, 5), need_grad=False) at 0x7fa2d799e350>}\n",
+      "{'y': <Variable((1, 1), need_grad=True) at 0x7fa2d799e4d0>}\n",
+      "<Variable((1, 5), need_grad=False) at 0x7fa2d799e350>\n",
+      "<Variable((1, 1), need_grad=True) at 0x7fa2d799e4d0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(net.inputs)\n",
+    "print(net.outputs)\n",
+    "x = net.inputs['x']\n",
+    "y = net.outputs['y']\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y: [[1.991658]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.d = np.array([11,12,13,14,15])\n",
+    "y.forward()  # You can execute a sub graph.\n",
+    "print(\"y: %s\" % y.d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Simple CNN"
    ]
   },
