add datasets generation

--- a/simple_models.ipynb
+++ b/simple_models.ipynb
@@ -619,6 +619,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_size = 5\n",
+    "x_range = (-10.0, 10.0)\n",
+    "n_samples = 10\n",
+    "test_c_header_fname = os.path.join(data_directory, 'test_data.h')\n",
+    "\n",
+    "# generate data in the x_range\n",
+    "a = np.arange(x_range[0], x_range[1], (x_range[1]-x_range[0])/(x_size*n_samples))\n",
+    "b = np.reshape(a, (-1, 5))\n",
+    "c_str = ',\\n'.join([','.join([str(e) for e in row]) for row in b])\n",
+    "\n",
+    "with open(test_c_header_fname, 'w') as f:\n",
+    "    f.write(c_str)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
