add datasets generation

--- a/simple_models.ipynb
+++ b/simple_models.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-05-05 16:46:58,601 [nnabla][INFO]: Initializing CPU extension...\n"
+      "2020-05-05 22:55:39,207 [nnabla][INFO]: Initializing CPU extension...\n"
      ]
     }
    ],
@@ -39,7 +39,9 @@
    "source": [
     "import pathlib, os\n",
     "data_directory='./models'\n",
-    "pathlib.Path(data_directory).mkdir(parents=True, exist_ok=True) "
+    "pathlib.Path(data_directory).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "x_size = 5"
    ]
   },
   {
@@ -59,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "OrderedDict([('affine/W',\n",
-      "              <Variable((5, 1), need_grad=True) at 0x7fac590e7c50>)])\n",
+      "              <Variable((5, 1), need_grad=True) at 0x7f92bf1aa9b0>)])\n",
       "array([[-0.06689208],\n",
       "       [ 0.01002087],\n",
       "       [ 0.07217436],\n",
@@ -74,9 +76,7 @@
     "rng = np.random.seed(2345)\n",
     "initializer = I.UniformInitializer((-0.1, 0.1), rng=rng)\n",
     "\n",
-    "x_size = 5\n",
     "x_range = (-1.0, 1.0)\n",
-    "\n",
     "x = nn.Variable((1, x_size))          # input tensor is just a vector of x_size floats\n",
     "y = PF.affine(x, 1, w_init=initializer, with_bias=False)\n",
     "\n",
@@ -117,16 +117,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-05-05 16:46:58,868 [nnabla][INFO]: Saving ./models/simple_model_affine.nnp as nnp\n",
-      "2020-05-05 16:46:58,869 [nnabla][INFO]: Saving /tmp/tmpwk_htgsh/network.nntxt as prototxt\n",
-      "2020-05-05 16:46:58,871 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmpwk_htgsh/parameter.protobuf\n"
+      "2020-05-05 22:55:39,487 [nnabla][INFO]: Saving ./models/simple_model_affine.nnp as nnp\n",
+      "2020-05-05 22:55:39,488 [nnabla][INFO]: Saving /tmp/tmpd7sbr9_4/network.nntxt as prototxt\n",
+      "2020-05-05 22:55:39,491 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmpd7sbr9_4/parameter.protobuf\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'networks': [{'name': 'simple_model_affine', 'batch_size': 1, 'outputs': {'y': <Variable((1, 1), need_grad=True) at 0x7fac2e96d290>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7fac40027a10>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_affine', 'data': ['x'], 'output': ['y']}]}\n"
+      "{'networks': [{'name': 'simple_model_affine', 'batch_size': 1, 'outputs': {'y': <Variable((1, 1), need_grad=True) at 0x7f92bf1d6230>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7f92d006ea10>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_affine', 'data': ['x'], 'output': ['y']}]}\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
      "output_type": "stream",
      "text": [
       "OrderedDict([('affine/W',\n",
-      "              <Variable((5, 1), need_grad=True) at 0x7fac2e80d050>)])\n",
+      "              <Variable((5, 1), need_grad=True) at 0x7f92bf0720b0>)])\n",
       "array([[ 0.01217159],\n",
       "       [ 0.0739175 ],\n",
       "       [-0.06551991],\n",
@@ -170,9 +170,7 @@
     "rng = np.random.seed(11579)\n",
     "initializer = I.UniformInitializer((-0.1, 0.1), rng=rng)\n",
     "\n",
-    "x_size = 5\n",
     "x_range = (-1.0, 1.0)\n",
-    "\n",
     "x = nn.Variable((1, x_size))          # input tensor is just a vector of x_size floats\n",
     "y0 = PF.affine(x, 1, w_init=initializer, with_bias=False)\n",
     "y = F.relu(y0)   # output is probs for 3 classes\n",
@@ -218,16 +216,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-05-05 16:46:58,890 [nnabla][INFO]: Saving ./models/simple_model_relu.nnp as nnp\n",
-      "2020-05-05 16:46:58,891 [nnabla][INFO]: Saving /tmp/tmptrbzip4y/network.nntxt as prototxt\n",
-      "2020-05-05 16:46:58,894 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmptrbzip4y/parameter.protobuf\n"
+      "2020-05-05 22:55:39,519 [nnabla][INFO]: Saving ./models/simple_model_relu.nnp as nnp\n",
+      "2020-05-05 22:55:39,521 [nnabla][INFO]: Saving /tmp/tmp4dlgb2c6/network.nntxt as prototxt\n",
+      "2020-05-05 22:55:39,523 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmp4dlgb2c6/parameter.protobuf\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'networks': [{'name': 'simple_model_relu', 'batch_size': 1, 'outputs': {'y0': <Variable((1, 1), need_grad=True) at 0x7fac2e80d110>, 'y': <Variable((1, 1), need_grad=True) at 0x7fac2e96dfb0>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7fac590e7c50>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_relu', 'data': ['x'], 'output': ['y0', 'y']}]}\n"
+      "{'networks': [{'name': 'simple_model_relu', 'batch_size': 1, 'outputs': {'y0': <Variable((1, 1), need_grad=True) at 0x7f92bf072050>, 'y': <Variable((1, 1), need_grad=True) at 0x7f92bf1d6e30>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7f92bf1aa9b0>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_relu', 'data': ['x'], 'output': ['y0', 'y']}]}\n"
      ]
     }
    ],
@@ -256,7 +254,7 @@
      "output_type": "stream",
      "text": [
       "OrderedDict([('affine/W',\n",
-      "              <Variable((5, 1), need_grad=True) at 0x7fac2e96d650>)])\n",
+      "              <Variable((5, 1), need_grad=True) at 0x7f92bf1d6710>)])\n",
       "array([[-0.01273317],\n",
       "       [ 0.05659582],\n",
       "       [ 0.01842164],\n",
@@ -271,9 +269,7 @@
     "rng = np.random.seed(1393)\n",
     "initializer = I.UniformInitializer((-0.1, 0.1), rng=rng)\n",
     "\n",
-    "x_size = 5\n",
     "x_range = (-1.0, 1.0)\n",
-    "\n",
     "x = nn.Variable((1, x_size))          # input tensor is just a vector of x_size floats\n",
     "y0 = PF.affine(x, 1, w_init=initializer, with_bias=False)\n",
     "y = F.sigmoid(y0)   # output is probs for 3 classes\n",
@@ -319,16 +315,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-05-05 16:46:58,920 [nnabla][INFO]: Saving ./models/simple_model_sigmoid.nnp as nnp\n",
-      "2020-05-05 16:46:58,924 [nnabla][INFO]: Saving /tmp/tmp3satvhie/network.nntxt as prototxt\n",
-      "2020-05-05 16:46:58,928 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmp3satvhie/parameter.protobuf\n"
+      "2020-05-05 22:55:39,550 [nnabla][INFO]: Saving ./models/simple_model_sigmoid.nnp as nnp\n",
+      "2020-05-05 22:55:39,551 [nnabla][INFO]: Saving /tmp/tmp47go44zd/network.nntxt as prototxt\n",
+      "2020-05-05 22:55:39,555 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmp47go44zd/parameter.protobuf\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'networks': [{'name': 'simple_model_sigmoid', 'batch_size': 1, 'outputs': {'y0': <Variable((1, 1), need_grad=True) at 0x7fac2e944fb0>, 'y': <Variable((1, 1), need_grad=True) at 0x7fac2e96d6b0>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7fac2e96dad0>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_sigmoid', 'data': ['x'], 'output': ['y0', 'y']}]}\n"
+      "{'networks': [{'name': 'simple_model_sigmoid', 'batch_size': 1, 'outputs': {'y0': <Variable((1, 1), need_grad=True) at 0x7f92e9950fb0>, 'y': <Variable((1, 1), need_grad=True) at 0x7f92bf1d63b0>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7f92bf1d6f50>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_sigmoid', 'data': ['x'], 'output': ['y0', 'y']}]}\n"
      ]
     }
    ],
@@ -357,7 +353,7 @@
      "output_type": "stream",
      "text": [
       "OrderedDict([('affine/W',\n",
-      "              <Variable((5, 1), need_grad=True) at 0x7fac2e821170>)])\n",
+      "              <Variable((5, 1), need_grad=True) at 0x7f92bf072ef0>)])\n",
       "array([[-0.08689096],\n",
       "       [ 0.00578396],\n",
       "       [-0.08795961],\n",
@@ -372,9 +368,7 @@
     "rng = np.random.seed(8853)\n",
     "initializer = I.UniformInitializer((-0.1, 0.1), rng=rng)\n",
     "\n",
-    "x_size = 5\n",
     "x_range = (-1.0, 1.0)\n",
-    "\n",
     "x = nn.Variable((1, x_size))          # input tensor is just a vector of x_size floats\n",
     "y0 = PF.affine(x, 1, w_init=initializer, with_bias=False)\n",
     "y = F.tanh(y0)   # output is probs for 3 classes\n",
@@ -420,16 +414,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-05-05 16:46:58,958 [nnabla][INFO]: Saving ./models/simple_model_tanh.nnp as nnp\n",
-      "2020-05-05 16:46:58,962 [nnabla][INFO]: Saving /tmp/tmpprr7z4et/network.nntxt as prototxt\n",
-      "2020-05-05 16:46:58,965 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmpprr7z4et/parameter.protobuf\n"
+      "2020-05-05 22:55:39,580 [nnabla][INFO]: Saving ./models/simple_model_tanh.nnp as nnp\n",
+      "2020-05-05 22:55:39,581 [nnabla][INFO]: Saving /tmp/tmp2aq3u_8f/network.nntxt as prototxt\n",
+      "2020-05-05 22:55:39,583 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmp2aq3u_8f/parameter.protobuf\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'networks': [{'name': 'simple_model_tanh', 'batch_size': 1, 'outputs': {'y0': <Variable((1, 1), need_grad=True) at 0x7fac2e821110>, 'y': <Variable((1, 1), need_grad=True) at 0x7fac2e80de90>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7fac2e96d650>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_tanh', 'data': ['x'], 'output': ['y0', 'y']}]}\n"
+      "{'networks': [{'name': 'simple_model_tanh', 'batch_size': 1, 'outputs': {'y0': <Variable((1, 1), need_grad=True) at 0x7f92bf072f50>, 'y': <Variable((1, 1), need_grad=True) at 0x7f92bf0723b0>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7f92bf1d6710>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_tanh', 'data': ['x'], 'output': ['y0', 'y']}]}\n"
      ]
     }
    ],
@@ -458,7 +452,7 @@
      "output_type": "stream",
      "text": [
       "OrderedDict([('affine/W',\n",
-      "              <Variable((5, 1), need_grad=True) at 0x7fac2e80dbf0>)])\n",
+      "              <Variable((5, 1), need_grad=True) at 0x7f92bf082bf0>)])\n",
       "array([[-0.00840704],\n",
       "       [-0.02306222],\n",
       "       [-0.04123034],\n",
@@ -473,9 +467,7 @@
     "rng = np.random.seed(63452)\n",
     "initializer = I.UniformInitializer((-0.1, 0.1), rng=rng)\n",
     "\n",
-    "x_size = 5\n",
     "x_range = (-1.0, 1.0)\n",
-    "\n",
     "x = nn.Variable((1, x_size))          # input tensor is just a vector of 5 floats\n",
     "y0 = PF.affine(x, 1, w_init=initializer, with_bias=False)\n",
     "y = F.softmax(y0)   # output is probs for 3 classes\n",
@@ -521,16 +513,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-05-05 16:46:58,988 [nnabla][INFO]: Saving ./models/simple_model_softmax.nnp as nnp\n",
-      "2020-05-05 16:46:58,990 [nnabla][INFO]: Saving /tmp/tmpuycczmaf/network.nntxt as prototxt\n",
-      "2020-05-05 16:46:58,994 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmpuycczmaf/parameter.protobuf\n"
+      "2020-05-05 22:55:39,616 [nnabla][INFO]: Saving ./models/simple_model_softmax.nnp as nnp\n",
+      "2020-05-05 22:55:39,616 [nnabla][INFO]: Saving /tmp/tmp8ot9nskc/network.nntxt as prototxt\n",
+      "2020-05-05 22:55:39,619 [nnabla][INFO]: Parameter save (.protobuf): /tmp/tmp8ot9nskc/parameter.protobuf\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'networks': [{'name': 'simple_model_softmax', 'batch_size': 1, 'outputs': {'y0': <Variable((1, 1), need_grad=True) at 0x7fac2e80dd70>, 'y': <Variable((1, 1), need_grad=True) at 0x7fac2e80dcb0>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7fac2e80df50>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_softmax', 'data': ['x'], 'output': ['y0', 'y']}]}\n"
+      "{'networks': [{'name': 'simple_model_softmax', 'batch_size': 1, 'outputs': {'y0': <Variable((1, 1), need_grad=True) at 0x7f92bf082cb0>, 'y': <Variable((1, 1), need_grad=True) at 0x7f92bf082c50>}, 'names': {'x': <Variable((1, 5), need_grad=False) at 0x7f92bf072ef0>}}], 'executors': [{'name': 'Runtime', 'network': 'simple_model_softmax', 'data': ['x'], 'output': ['y0', 'y']}]}\n"
      ]
     }
    ],
@@ -627,22 +619,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_size = 5\n",
     "x_range = (-10.0, 10.0)\n",
     "n_samples = 10\n",
     "test_c_header_fname = os.path.join(data_directory, 'test_data.h')\n",
     "\n",
     "# generate data in the x_range\n",
     "a = np.arange(x_range[0], x_range[1], (x_range[1]-x_range[0])/(x_size*n_samples))\n",
-    "b = np.reshape(a, (-1, 5))\n",
+    "b = np.reshape(a, (-1, x_size))\n",
     "c_str = ',\\n'.join([','.join([str(e) for e in row]) for row in b])\n",
     "\n",
     "with open(test_c_header_fname, 'w') as f:\n",
-    "    f.write(c_str)"
+    "    f.write(c_str)\n",
+    "\n",
+    "time.sleep(5)\n",
+    "    \n",
+    "# verification\n",
+    "assert(os.path.exists(test_c_header_fname))\n",
+    "assert(os.path.isfile(test_c_header_fname))            "
    ]
   },
   {
